# memorydelaysmtphandler

./: README.md  pyproject.toml
memorydelaysmtphandler/: memorydelaysmtphandler.py
test/: test_memorydelaysmtphandler.py
